# rumi_rs

./: .gitignore  Cargo.toml  README.md  commands.md  pre_cli.md  readme.md  rust_server_requierments.md  send_folder.md
.github/workflows/: deployment.yml  publish.yml
src/: backup.rs  config.rs  error.rs  lib.rs  main.rs  session.rs  tests.rs
src/commands/: ethereum.rs  mod.rs  servers.rs  websites.rs
tests/: integration_tests.rs
