[package]
name = "rumi2"
version = "0.1.0"
edition = "2021"
authors = ["ONDONDA Prince Merveil @princefr"]
description = "Rumi2 simplifies the process of deploying your web applications and servers. With seamless SSH2 integration, it effortlessly manages the publishing process to your existing server infrastructure, ensuring secure and efficient transfers every time."
license = "MIT"
repository = "https://github.com/Bourse-numerique-d-afrique/rumi_rs"
readme = "readme.md"
documentation = "https://docs.rs/rumi2/0.1.0/rumi2/"
keywords = ["CLI"]

[dependencies]
clap = "4.5.10"
ssh2 = "0.9.4"


[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "serde",             # Enable serde support
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
